# egga

./: .gitignore  Earthfile  README.md  pyproject.toml
.github/workflows/: ci.yml
egga/: expression.py  geometric_algebra.py  utils.py
examples/: advanced_simplification.py  basic_equality_check.py  basic_equation_solving.py  basic_simplification.py
tests/: .gitignore  test_rules.py  test_utils.py
