[tool.poetry]
name = "egga"
version = "0.1.5"
description = "Symbolic Geometric Algebra with E-Graphs "
authors = ["Robin Kahlow <tora@warlock.ai>"]
readme = "README.md"
packages = [{ include = "egga" }]
homepage = "https://github.com/RobinKa/egga"
repository = "https://github.com/RobinKa/egga"
license = "MIT"
keywords = [
    "geometric-algebra",
    "clifford-algebra",
    "simplification",
    "equations",
    "egraph",
    "egglog",
    "multi-vector",
    "para-vector",
    "mathematics",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",

    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",

    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
egglog = "^0.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
